# lms-db

./: .env  .gitignore  COURSE_MANAGEMENT_FEATURES.md  LICENSE  QUICK_START.md  README.md  README_BACKEND_SETUP.md  docker-compose.dev.yml  docker-compose.yml  lms_database.sql  package-lock.json  package.json  script.sql  vercel.json
.github/: AZURE_API_DEFINITION_MANAGEMENT.md  AZURE_CONTRIBUTOR_ROLE.md  AZURE_REGISTRATION_GUIDE.md  CHECK_ENV_VAR_IN_BROWSER.md  CHOOSE_CONTRIBUTOR_ROLE.md  DEPLOYMENT_SETUP.md  FIND_CONTRIBUTOR_ROLE.md  FIND_IAM_GUIDE.md  FIX_APP_SERVICE_NOT_FOUND.md  FIX_LOCALHOST_ISSUE.md  VERCEL_ENV_VARS_STEP_BY_STEP.md
Backend/server/: README.md  app.py  deploy_procedures.py  pyproject.toml  test_connection.py
Backend/server/config/: database.py
Backend/server/procedures/: admin_crud.sql  advanced_statistics.sql  assessment_queries.sql  assignment_crud.sql  assignment_crud_new.sql  assignment_crud_refactored.sql  course_advanced.sql  course_crud.sql  course_statistics.sql  deploy_all.sql  filter_users.sql  get_assignment_with_submission.sql  get_quiz_by_id.sql  get_statistics.sql  get_student_all_assignments.sql  get_student_all_quizzes.sql  get_tutor_dashboard.sql  get_user_details.sql  password_reset.sql  quiz_crud.sql  quiz_crud_new.sql  reset_user_password.sql  section_crud.sql  student_crud.sql  student_dashboard.sql  tutor_crud.sql  update_user_role.sql
Backend/server/routes/: admin.py  assignments.py  auth.py  courses.py  grades.py  quizzes.py  schedule.py  students.py  tutors.py  users.py
Backend/server/utils/: jwt_utils.py
(+125 files in other folders)
