[tool.poetry]
name = "lms-backend"
version = "0.1.0"
description = "LMS Backend API Server"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "3.0.0"
flask-cors = "4.0.0"
python-dotenv = "1.0.0"
pymssql = "2.2.11"
bcrypt = "4.1.2"
pyjwt = "2.8.0"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
# Add development dependencies here if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

